[package]
name = "hybrid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hybrid"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module"] }
hashbrown = "0.13.1"
#serde = {version = "1.0.144", features = ["derive"] }
#serde_json = "1.0.85"
#blis-src = { version = "0.2", features = ["cblas", "static"] }
#cblas-sys = "0.1.4"
rand = "*"

[build-dependencies]
cc = "1.0"
