[package]
name = "hybrid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hybrid"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module"] }
hashbrown = "0.13.1"
#serde = {version = "1.0.144", features = ["derive"] }
#serde_json = "1.0.85"
blas-src = { version = "0.8", features = ["blis"] }
cblas-sys = "0.1.4"
rand = "*"
threadpool = "1.8.1"
#blas-src = { version = "0.8", features= ["blis"] }
#cblas = "0.4.0"
crossbeam-channel = "0.5.6"
rayon = "1.6.0"
ndarray = "0.15.6"
sprs = "0.11.0"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
criterion = "0.3"

#[[bench]]
#name = "lib_bench"
#harness = false

