[package]
name = "hybrid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hybrid"
crate-type = ["cdylib", "lib"]

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module", "hashbrown"] }
hashbrown = "0.12"
rand = "*"
threadpool = "1.8.1"
crossbeam-channel = "0.5.6"
rayon = "1.6.0"
ndarray = "0.15.6"
sprs = "0.11.0"
array-macro = "2.1.5"
hungarian = "1.1.1"
ordered-float = "3.3.0"
lp-modeler = {version = "0.5.0"}
minilp = "0.2.2"
fluid-let = "1.0.0"
termcolor = "1.2.0"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
criterion = "0.3"

#[[bench]]
#name = "lib_bench"
#harness = false

